# json-viewer

./: '  Cargo.toml  LICENSE  README.md  test_file.json  test_file2.json
src/: input_manager.rs  json_enviroment.rs  json_parser.rs  json_utils.rs  main.rs  ui_handles.rs  utils.rs
src/json_utils/: json_value.rs
ui/: JsonUtils.slint  app-window.slint  button.slint  json.slint
