[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.17.2"
serde_json = "1.0.149"
slint = { version = "1.14", features = ["raw-window-handle-06"] }

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
lto = true

